--- a/smac_budgets.ipynb
+++ b/smac_budgets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,8 @@
     "_n_configs_in_stage: dict[int, list] = {}\n",
     "_budgets_in_stage: dict[int, list] = {}\n",
     "\n",
+    "total_trials = 0\n",
+    "total_budget = 0\n",
     "for i in range(_s_max + 1):\n",
     "    max_iter = _s_max - i\n",
     "\n",
@@ -43,15 +45,13 @@
     "        eta, max_budget, max_iter, _s_max\n",
     "    )\n",
     "    _max_iterations[i] = max_iter + 1\n",
-    "\n",
-    "\n",
-    "total_trials = np.sum([np.sum(v) for v in _n_configs_in_stage.values()])\n",
-    "total_budget = np.sum([np.sum(v) for v in _budgets_in_stage.values()])"
+    "    total_budget += np.sum([b * n for b, n in zip(_budgets_in_stage[i], _n_configs_in_stage[i])])\n",
+    "    total_trials += np.sum(_n_configs_in_stage[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
       "budgets per stage {0: [15.625, 31.25, 62.5, 125.0, 250.0], 1: [31.25, 62.5, 125.0, 250.0], 2: [62.5, 125.0, 250.0], 3: [125.0, 250.0], 4: [250.0]}\n",
       "n configs per stage {0: [16, 8, 4, 2, 1], 1: [10, 5, 2, 1], 2: [7, 3, 1], 3: [5, 2], 4: [5]}\n",
       "total number of trials 72\n",
-      "total budget 2015.625\n",
+      "total budget 5812.5\n",
       "is in total budget: True\n"
      ]
     }
@@ -79,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "arlbench",
+   "display_name": "rbt",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
